[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Models/Player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.868857

[sub_resource type="PrismMesh" id=2]
size = Vector3( 0.01, 0.01, 0.01 )

[sub_resource type="CylinderShape" id=3]
height = 1.29664

[sub_resource type="Animation" id=4]
resource_name = "Crouch"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.13836, 0 ), Vector3( 0, 0.688362, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LeftHand:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.583649, -0.759482, -1.11365 ), Vector3( -0.583649, -0.659643, -1.11365 ), Vector3( -0.583649, -0.217612, -1.11365 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/RightHand:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.514532, -0.762608, -1.00081 ), Vector3( 0.514532, -0.662769, -1.00081 ), Vector3( 0.514532, -0.220738, -1.00081 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.13836, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LeftHand:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.583649, -0.759482, -1.11365 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/RightHand:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.514532, -0.762608, -1.00081 ) ]
}

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.623968, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13836, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 250.0

[node name="MeleeActionRange" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="aim" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.31636 )
mesh = SubResource( 2 )
material/0 = null

[node name="RightHand" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514532, -0.762608, -1.00081 )

[node name="LeftHand" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.583649, -0.759482, -1.11365 )

[node name="Grabable" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Grabable"]
transform = Transform( 1.77841, 0, 0, 0, 1.89913, 0, 0, 0, 1.77841, -0.0146909, 1.00906, 0 )
shape = SubResource( 3 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="body_entered" from="Grabable" to="." method="_on_Grabable_body_entered"]
[connection signal="body_exited" from="Grabable" to="." method="_on_Grabable_body_exited"]
